# kirkroerig.com

./: .gitignore  Procfile  README.md  activityMon.js  article.py  createTable.sql  kirkroerig.js  kirkroerig.py  markdown.js  nohup.out  package.json  project.js  prototype.js  pyproject.toml  requirements.txt
articles/: Duplicated File Descriptors and system().md  Resizing_a_VirtualBox_VDI_on_OSX.md  a totally new article.md  autonomous_car.md  changing_fedora_keymaps_on_librem13.md  codesigning_gdb_on_macos.md  creating_a_unix_daemon.md  libNEMA.md  my_first_robotics_competition:_a_post_mortem.md  new.md  work_autonomous_car.md  work_libnn.md  work_orbital_elements_calculator.md  work_projective.md  work_pwm_logger.md  work_seen.md  work_tracer.md
articles/AVC 2016/: system() and Duplicated File Descriptors.md
content/: index.html  resume.html  sqrtcnv.xls
content/css/: main.css
content/js/: animations.js  article.js  bg.js  highlight.pack.js  kirkroerig.sql  kr.js
kirkroerig/: __main__.py  article.py
kirkroerig/articles/: Resizing_a_VirtualBox_VDI_on_OSX.md  changing_fedora_keymaps_on_librem13.md  codesigning_gdb_on_macos.md  creating_a_unix_daemon.md  derivative.md  gradient.md  my_first_robotics_competition:_a_post_mortem.md  policy_gradient.md  work_seen.md  work_tracer.md
kirkroerig/content/: resume  resume.html  sqrtcnv.csv
kirkroerig/templates/: about.html  articles.html  home.html
templates/: about.html  articles.html  contact.html  home.html
templates/layouts/: main.html
views/: about.handlebars  contact.handlebars  work.handlebars
(+20 files in other folders)
