[tool.poetry]
name = "kirkroerig.com"
version = "0.1.0"
description = "My personal website"
authors = ["Kirk Roerig <mr.possoms@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
markdown = "^3.1"
mistune = "^0.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
