[project]
name = "kirkroerig"
version = "0.1.0"
dependencies = [
	"flask>=3.0.3",
	"mistune>=3.0.2",
	"black>=23.1.0",
	"pytest>=7.3.0",
	"flake8>=6.1.0",
	"mypy>=1.4.0",
]

[tool.poetry]
name = "kirkroerig.com"
version = "0.1.0"
description = "My personal website"
authors = ["Kirk Roerig <mr.possoms@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^3.0.3"
markdown = "^3.1"
mistune = "^3.0.2"
pytest = "^7.3.0"
black = "^23.1.0"
flake8 = "^6.1.0"
mypy = "^1.4.0"

[tool.black]
line-length = 88
target-version = ["py39"]
skip-string-normalization = true

[tool.flake8]
max-line-length = 88
ignore = [
    "E203",  # Whitespace before ':' (handled by Black)
    "W503",  # Line break before binary operator (PEP 8 compatible)
]

[tool.mypy]
strict = true
ignore_missing_imports = true
